--- a/index.html
+++ b/index.html
@@ -112,38 +112,38 @@
             </div>
         </div>
     </header>
-    <!-- <main class="">
-        <div class="main-top">
-            <div class="main-top__article one">
-                <div class="logo-article">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 66 16">
+    <main class="">
+        <div class="main--article--list">
+            <article class="main--article--item first">
+                <div class="article-logo">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 122 32">
                         <path fill="#FFF"
                             d="M34 16h-6v-5.2c0-.7-.3-1.3-.7-1.8L25 6.7c-.5-.4-1.1-.7-1.8-.7H22v10h-6V0h8.7c1.3 0 2.6.5 3.5 1.5l4.3 4.3c1 .9 1.5 2.2 1.5 3.5V16zM60 0v5.2c0 .7-.3 1.3-.7 1.8L57 9.3c-.5.5-1.1.7-1.8.7h-2.5c.8-.9 1.3-2.1 1.3-3.3V0h-6v5.2c0 .7-.3 1.3-.7 1.8L45 9.3c-.5.5-1.1.7-1.8.7H42V0h-6v16h8.7c1.3 0 2.6-.5 3.5-1.5l2.8-2.8V16h5.7c1.3 0 2.6-.5 3.5-1.5l4.3-4.3c1-.9 1.5-2.2 1.5-3.5V0h-6zM14 0H0v6h4v10h6V6h4" />
                     </svg>
                 </div>
                 <div class="cover-date">Monday — October 21, 2019</div>
-                <div class="main-top__text heading-padding">
+                <div class="body">
                     <h4>Gear</h4>
                     <h2 class="heading-one">CHEAP: This DJI Mavic Air drone kit is $150 off — fly my pretties, fly!</h2>
                     <span>By Charlote Dickie</span>
                 </div>
-            </div>
-            <div class="main-top__article two">
-                <div class="main-top__text heading-padding">
+            </article>
+            <article class="main--article--item">
+                <div class="body">
                     <h4>Gear</h4>
                     <h2 class="heading-two">CHEAP: This DJI Mavic Air drone kit is $150 off — fly my pretties, fly!</h2>
                     <span>By Charlote Dickie</span>
                 </div>
-            </div>
-            <div class="main-top__article three">
-                <div class="main-top__text heading-padding">
+            </article>
+            <article class="main--article--item">
+                <div class="body">
                     <h4>Gear</h4>
                     <h2 class="heading-two">CHEAP: This DJI Mavic Air drone kit is $150 off — fly my pretties, fly!</h2>
                     <span>By Charlote Dickie</span>
                 </div>
-            </div>
+            </article>
         </div>
-        <div class="main-rest">
+        <!-- <div class="main-rest">
             <h1 class="text-color heading-padding title-active">
                 Latest news <span class="title-icon"><i class="fa fa-chevron-right"></i></span>
             </h1>
@@ -596,9 +596,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </main>
-    <footer>
+    <!-- <footer>
         <div class="footer-top">
             <div>
                 <ul class="footer-link__icons">
