add news type one with responsive desktop and tv

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Responsive Design</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
 </head>
 
@@ -112,7 +114,7 @@
             </div>
         </div>
     </header>
-    <main class="">
+    <main>
         <div class="main--article--list">
             <article class="main--article--item first">
                 <div class="article-logo">
@@ -143,103 +145,114 @@
                 </div>
             </article>
         </div>
-        <!-- <div class="main-rest">
-            <h1 class="text-color heading-padding title-active">
+        <div class="main--ads-one">
+            <img src="https://tpc.googlesyndication.com/daca_images/simgad/18042429881767174580" alt="">
+        </div>
+        <div class="main--body">
+
+            <h1 class="news--title">
                 Latest news <span class="title-icon"><i class="fa fa-chevron-right"></i></span>
             </h1>
-            <div class="latest-news__section">
-                <div class="latest-news">
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
+
+            <div class="news--one--list">
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="https://image.shutterstock.com/image-photo/beautiful-water-drop-on-dandelion-260nw-789676552.jpg"
+                            alt="depressed">
                     </div>
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <p>Pavlo</p>
                     </div>
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
+                </div>
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="https://image.shutterstock.com/image-photo/beautiful-water-drop-on-dandelion-260nw-789676552.jpg"
+                            alt="depressed">
                     </div>
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <p>Pavlo</p>
                     </div>
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
+                </div>
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="https://image.shutterstock.com/image-photo/beautiful-water-drop-on-dandelion-260nw-789676552.jpg"
+                            alt="depressed">
                     </div>
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <p>Pavlo</p>
                     </div>
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
+                </div>
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="https://image.shutterstock.com/image-photo/beautiful-water-drop-on-dandelion-260nw-789676552.jpg"
+                            alt="depressed">
                     </div>
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <p>Pavlo</p>
+                    </div>
+                </div>
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="https://image.shutterstock.com/image-photo/beautiful-water-drop-on-dandelion-260nw-789676552.jpg"
+                            alt="depressed">
+                    </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <p>Pavlo</p>
+                    </div>
+                </div>
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="https://image.shutterstock.com/image-photo/beautiful-water-drop-on-dandelion-260nw-789676552.jpg"
+                            alt="depressed">
+                    </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <p>Pavlo</p>
+                    </div>
+                </div>
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="https://image.shutterstock.com/image-photo/beautiful-water-drop-on-dandelion-260nw-789676552.jpg"
+                            alt="depressed">
+                    </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <p>Pavlo</p>
+                    </div>
+                </div>
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="https://image.shutterstock.com/image-photo/beautiful-water-drop-on-dandelion-260nw-789676552.jpg"
+                            alt="depressed">
+                    </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <p>Pavlo</p>
                     </div>
                 </div>
             </div>
-            <div>
+            <!-- <div>
                 <div class="latest-funding__header text-color">
                     <h1 class="heading-padding title-active">
                         Latest funding rounds on Index.co <span class="title-icon"><i
@@ -595,8 +608,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div> -->
+            </div> -->
+        </div>
+
     </main>
     <!-- <footer>
         <div class="footer-top">
