news type one and support responsive for all

--- a/index.html
+++ b/index.html
@@ -637,6 +637,108 @@
                     </div>
                 </div>
             </div>
+
+            <h1 class="news--title">
+                Latest news <span class="title-icon"><i class="fa fa-chevron-right"></i></span>
+            </h1>
+            <div class="news--one--list">
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="./images/images.png" alt="depressed">
+                    </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <span>$1200 </span>
+                        <strong>$21</strong>
+                    </div>
+                </div>
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="./images/images.png" alt="depressed">
+                    </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <span>$1200 </span>
+                        <strong>$21</strong>
+                    </div>
+                </div>
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="./images/images.png" alt="depressed">
+                    </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <span>$1200 </span>
+                        <strong>$21</strong>
+                    </div>
+                </div>
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="./images/images.png" alt="depressed">
+                    </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <span>$1200 </span>
+                        <strong>$21</strong>
+                    </div>
+                </div>
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="./images/images.png" alt="depressed">
+                    </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <span>$1200 </span>
+                        <strong>$21</strong>
+                    </div>
+                </div>
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="./images/images.png" alt="depressed">
+                    </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <span>$1200 </span>
+                        <strong>$21</strong>
+                    </div>
+                </div>
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="./images/images.png" alt="depressed">
+                    </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <span>$1200 </span>
+                        <strong>$21</strong>
+                    </div>
+                </div>
+                <div class="news--one--item">
+                    <div class="news--one--item__header">
+                        <img src="./images/images.png" alt="depressed">
+                    </div>
+                    <div class="news--one--item__body">
+                        <h3>
+                            Why startup founders should open up about their mental health
+                        </h3>
+                        <span>$1200 </span>
+                        <strong>$21</strong>
+                    </div>
+                </div>
+            </div>
             <!-- <h1 class="text-color heading-padding title-active">
                 Latest deals <span class="title-icon"><i class="fa fa-chevron-right"></i></span>
             </h1>
