--- a/index.html
+++ b/index.html
@@ -739,101 +739,9 @@
                     </div>
                 </div>
             </div>
-            <!-- <h1 class="text-color heading-padding title-active">
-                Latest deals <span class="title-icon"><i class="fa fa-chevron-right"></i></span>
-            </h1>
-            <div class="latest-news__section">
-                <div class="latest-news">
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
-                    </div>
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
-                    </div>
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
-                    </div>
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
-                    </div>
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
-                    </div>
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
-                    </div>
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
-                    </div>
-                    <div class="latest-news__story">
-                        <div class="story-image__container">
-                            <img src="images/latest_news.png" alt="depressed">
-                        </div>
-                        <div class="story-image__text">
-                            <h3>
-                                Why startup founders should open up about their mental health
-                            </h3>
-                            <p>Pavlo</p>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
+            <div class="main--ads-one">
+                <img src="https://tpc.googlesyndication.com/daca_images/simgad/18042429881767174580" alt="">
+            </div>
         </div>
 
     </main>
