--- a/index.html
+++ b/index.html
@@ -745,92 +745,62 @@
         </div>
 
     </main>
-    <!-- <footer>
-        <div class="footer-top">
-            <div>
-                <ul class="footer-link__icons">
-                    <li>
-                        <a href="#">
-                            <div class="icon">
-                                <i class="fa fa-facebook-official"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="icon">
-                                <i class="fa fa-twitter"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="icon">
-                                <i class="fa fa-youtube-play"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="icon">
-                                <i class="fa fa-instagram"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="icon">
-                                <i class="fa fa-pinterest-p"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="icon">
-                                <i class="fa fa-rss"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="icon">
-                                <i class="fa fa-envelope"></i>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <ul class="footer-nav">
-                    <li>
-                        <a href="#">EVENTS</a>
-                    </li>
-                    <li>
-                        <a href="#">ABOUT</a>
-                    </li>
-                    <li>
-                        <a href="#">TEAM</a>
-                    </li>
-                    <li>
-                        <a href="#">ADVERTISE</a>
-                    </li>
-                    <li>
-                        <a href="#">JOBS</a>
-                    </li>
-                    <li>
-                        <a href="#">CONTACT</a>
-                    </li>
-                </ul>
-            </div>
+    <footer>
+        <div class="footer--top">
+            <ul class="footer--top__icons">
+                <li>
+                    <i class="fa fa-facebook-official"></i>
+                </li>
+                <li>
+                    <i class="fa fa-twitter"></i>
+                </li>
+                <li>
+                    <i class="fa fa-youtube-play"></i>
+                </li>
+                <li>
+                    <i class="fa fa-instagram"></i>
+                </li>
+                <li>
+                    <i class="fa fa-pinterest-p"></i>
+
+                </li>
+                <li>
+                    <i class="fa fa-rss"></i>
+
+                </li>
+                <li>
+                    <i class="fa fa-envelope"></i>
+                </li>
+            </ul>
+            <ul class="footer--top__nav">
+                <li>
+                    <a href="#">EVENTS</a>
+                </li>
+                <li>
+                    <a href="#">ABOUT</a>
+                </li>
+                <li>
+                    <a href="#">TEAM</a>
+                </li>
+                <li>
+                    <a href="#">ADVERTISE</a>
+                </li>
+                <li>
+                    <a href="#">JOBS</a>
+                </li>
+                <li>
+                    <a href="#">CONTACT</a>
+                </li>
+            </ul>
         </div>
-        <div class="footer-bottom">
-            <div>
-                <span>
-                    © 2006–2019 The Next Web B.V.
-                </span>
-            </div>
+        <div class="footer--bottom">
+            <span>
+                The Next Web © 2006–2019 The Next Web B.V. Made with ♥ in Amsterdam. Powered by StackPath
+
+            </span>
         </div>
-    </footer> -->
+    </footer>
+
 </body>
 
 </html>
