add found rising

--- a/index.html
+++ b/index.html
@@ -256,73 +256,95 @@
             <div class="main--ads-one">
                 <img src="https://tpc.googlesyndication.com/daca_images/simgad/18042429881767174580" alt="">
             </div>
-            <!-- <div>
-                <div class="latest-funding__header text-color">
-                    <h1 class="heading-padding title-active">
-                        Latest funding rounds on Index.co <span class="title-icon"><i
-                                class="fa fa-chevron-right"></i></span>
-                    </h1>
+            <div class="news--two">
+                <h1 class="news--title">
+                    Latest funding rounds on Index.co <span class="title-icon"><i
+                            class="fa fa-chevron-right"></i></span>
+                </h1>
+                <ul>
+                    <li class="title-active">See more</li>
+                    <li class="title-active">Get updates by email</li>
+                    <li class="title-active">Add info</li>
+                </ul>
+            </div>
+            <div class="news--two--list">
+                <div class="news--two--item">
+                    <div class="header">
+                        <img class="image"
+                            src="https://index.tnwcdn.com/images/5ec987de33ab1484549cc14ddebf135ead38b35d.png"
+                            alt="image">
+                        <h2 class="title">
+                            Verishop
+                        </h2>
+                        <div class="subtitle">
+                            <strong>$12.5M</strong>
+                            <p>Venture Captital</p>
+                        </div>
+                    </div>
                     <ul>
-                        <li class="title-active">See more</li>
-                        <li class="title-active">Get updates by email</li>
-                        <li class="title-active">Add info</li>
+                        <li>Lifestyle</li>
+                        <li>Lightspeed Venture Partners</li>
+                        <li>Verishop: $30 Million In Funding Raised And Valuation Of More Than $100 Million</li>
                     </ul>
                 </div>
-                <div class="latest-funding">
-                    <div class="fund">
-                        <h2 class="fund-label">
+                <div class="news--two--item">
+                    <div class="header">
+                        <img class="image"
+                            src="https://index.tnwcdn.com/images/5ec987de33ab1484549cc14ddebf135ead38b35d.png"
+                            alt="image">
+                        <h2 class="title">
                             Verishop
                         </h2>
-                        <div class="price">
-                            $12.5M
+                        <div class="subtitle">
+                            <strong>$12.5M</strong>
+                            <p>Venture Captital</p>
                         </div>
-                        <ul>
-                            <li>Lifestyle</li>
-                            <li>Lightspeed Venture Partners</li>
-                            <li>Verishop: $30 Million In Funding Raised And Valuation Of More Than $100 Million</li>
-                        </ul>
                     </div>
-                    <div class="fund">
-                        <h2 class="fund-label">
-                            Verishop
-                        </h2>
-                        <div class="price">
-                            $12.5M
-                        </div>
-                        <ul>
-                            <li>Lifestyle</li>
-                            <li>Lightspeed Venture Partners</li>
-                            <li>Verishop: $30 Million In Funding Raised And Valuation Of More Than $100 Million</li>
-                        </ul>
-                    </div>
-                    <div class="fund">
-                        <h2 class="fund-label">
-                            Verishop
-                        </h2>
-                        <div class="price">
-                            $12.5M
-                        </div>
-                        <ul>
-                            <li>Lifestyle</li>
-                            <li>Lightspeed Venture Partners</li>
-                            <li>Verishop: $30 Million In Funding Raised And Valuation Of More Than $100 Million</li>
-                        </ul>
-                    </div>
-                    <div class="fund">
-                        <h2 class="fund-label">
-                            Verishop
-                        </h2>
-                        <div class="price">
-                            $12.5M
-                        </div>
-                        <ul>
-                            <li>Lifestyle</li>
-                            <li>Lightspeed Venture Partners</li>
-                            <li>Verishop: $30 Million In Funding Raised And Valuation Of More Than $100 Million</li>
-                        </ul>
-                    </div>
+                    <ul>
+                        <li>Lifestyle</li>
+                        <li>Lightspeed Venture Partners</li>
+                        <li>Verishop: $30 Million In Funding Raised And Valuation Of More Than $100 Million</li>
+                    </ul>
                 </div>
-            </div> -->
+                <div class="news--two--item">
+                    <div class="header">
+                        <img class="image"
+                            src="https://index.tnwcdn.com/images/5ec987de33ab1484549cc14ddebf135ead38b35d.png"
+                            alt="image">
+                        <h2 class="title">
+                            Verishop
+                        </h2>
+                        <div class="subtitle">
+                            <strong>$12.5M</strong>
+                            <p>Venture Captital</p>
+                        </div>
+                    </div>
+                    <ul>
+                        <li>Lifestyle</li>
+                        <li>Lightspeed Venture Partners</li>
+                        <li>Verishop: $30 Million In Funding Raised And Valuation Of More Than $100 Million</li>
+                    </ul>
+                </div>
+                <div class="news--two--item">
+                    <div class="header">
+                        <img class="image"
+                            src="https://index.tnwcdn.com/images/5ec987de33ab1484549cc14ddebf135ead38b35d.png"
+                            alt="image">
+                        <h2 class="title">
+                            Verishop
+                        </h2>
+                        <div class="subtitle">
+                            <strong>$12.5M</strong>
+                            <p>Venture Captital</p>
+                        </div>
+                    </div>
+                    <ul>
+                        <li>Lifestyle</li>
+                        <li>Lightspeed Venture Partners</li>
+                        <li>Verishop: $30 Million In Funding Raised And Valuation Of More Than $100 Million</li>
+                    </ul>
+                </div>
+            </div>
             <div class="news--three--list">
                 <div class="news--three--item">
                     <h2 class="news--title">
@@ -743,6 +765,8 @@
                 <img src="https://tpc.googlesyndication.com/daca_images/simgad/18042429881767174580" alt="">
             </div>
         </div>
+        </div>
+
 
     </main>
     <footer>
